--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/d3": "^7.1.0",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.34",
     "@types/react": "^17.0.31",
     "@types/react-dom": "^17.0.10",
+    "d3": "^7.1.1",
+    "graphql": "^15.6.1",
+    "graphql-request": "^3.6.1",
     "react": "^17.0.2",
+    "react-d3-library": "^1.1.8",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.4",
