--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "graphql": "^15.6.1",
     "graphql-request": "^3.6.1",
     "react": "^17.0.2",
-    "react-d3-library": "^1.1.8",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
